test/programs/good/typechecker/measr_3.lq
initBit :: !(() -> Bit)
initBit _ = measr (new @0)

main :: Bit * Bit
main = (initBit (), initBit ())
